--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <!-- Load the MinnoJS IAT library from a CDN. You can host this yourself if your environment blocks external scripts. -->
     <script src="https://cdn.jsdelivr.net/gh/minnojs/minno-tasks@latest/iat/IAT.js"></script>
+    <!-- Load the specific IAT configuration for learning disabilities. -->
     <script src="learning_disability_single_iat.js"></script>
   </head>
   <body></body>
