--- a/iat.html
+++ b/iat.html
@@ -47,7 +47,11 @@
   <script type="module">
     import "./js/app.js";
     import { updateState } from "./js/state.js";
-
+try {
+  const k="__ok__"; localStorage.setItem(k,"1"); localStorage.removeItem(k);
+} catch(e) {
+  window.location.href = "timeout.html";
+}
     /**********************************************************************
      * UI RENDERER (IAT-style header boxes + central stimulus)
      **********************************************************************/
